Add types to variable declarations